Update BlackBoxTesting.java with editing bugs fixed